# django-rtc

./: README.md  pyproject.toml
a_core/: settings.py
a_rtchat/: forms.py  models.py  views.py
a_rtchat/migrations/: 0001_initial.py
templates/a_rtchat/: chat.html  chat_message.html
templates/a_rtchat/partials/: chat_message_p.html
templates/includes/: header.html
